test/cases/compile_errors/stage1/test/access_invalid_typeInfo_decl.zig
const A = B;
test "Crash" {
    _ = @typeInfo(@This()).Struct.decls[0];
}

// error
// backend=stage1
// target=native
// is_test=1
//
// tmp.zig:1:11: error: use of undeclared identifier 'B'
